<resources>
    <string name="app_name">FurnitureShoppingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_title1">Make your </string>
    <string name="intro_title2">home beautiful</string>
    <string name="intro_content">The best simple place where you\ndiscover most wonderful furniture\nand make your home beautiful</string>
    <string name="get_started">Get Started</string>
    <string name="hello">Hello !</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">Username</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="have_account">Already have account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="hint_pass">At least 8 characters</string>
    <string name="hint_email">email@gmail.com</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dont_have_account">Don\'t you have an account?</string>
    <string name="error_pass">Password must have at least 8 characters</string>
    <string name="error_confirm_pass">Confirm password must match with password!!!</string>
    <string name="or">OR</string>
    <string name="forgot_email">We will send you the password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="home_title">Make home</string>
    <string name="home_subtitle">BEAUTIFUL</string>
    <string name="price">$ %1$d</string>
    <string name="best_products">Best Products</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="best_deals">Best Deals</string>
    <string name="show_detail">Show details</string>
    <string name="on_sale">On Sale</string>
    <string name="all_products">All Products</string>
    <string name="my_cart">My cart</string>
    <string name="check_out">Check out</string>
    <string name="total">Total:</string>
    <string name="promo_code">Enter your promo code</string>
    <string name="color">Color:</string>
    <string name="empty_cart_message">Your cart is empty!\nLook like you haven\'t added anything to your cart yet!</string>
    <string name="add_all_to_cart">Add all to my cart</string>
    <string name="new_address">New Address</string>
    <string name="contact">Contact</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="province">Province</string>
    <string name="ward">Ward</string>
    <string name="save_address">Save address</string>
    <string name="addition">Additional Info </string>
    <string name="addition_title">Additional Info (not required)</string>
    <string name="address_title">Address Title</string>
    <string name="work_space">Work Space</string>
    <string name="city">City</string>
    <string name="notification">Notification</string>
    <string name="submit">Submit Order</string>
    <string name="delivery">Delivery</string>
    <string name="order">Order</string>
    <string name="payment_method">Payment method</string>
    <string name="payment_detail">We do not support virtual payments. You can pay when you receive your order.\nApologies for the inconvenience.</string>
    <string name="your_products">Your products</string>
    <string name="log_out">Log out</string>
    <string name="my_order">My orders</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="payment_method_detail">"We only support paying when receive currently."</string>
    <string name="use_address">Use as the shipping address</string>
    <string name="success">Success!!!</string>
    <string name="congrat">Your order will be delivered soon.\nThank you for choosing our app!</string>
    <string name="back_to_home">Back to home</string>
</resources>