<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/homeFragment"
        android:icon="@drawable/clarity_home_solid"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/favoriteFragment"
        android:icon="@drawable/marker_1"
        app:showAsAction="ifRoom"
        android:title="@string/favorite"/>

    <item android:id="@+id/notificationFragment"
        android:icon="@drawable/bell"
        android:title="@string/notification"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/profileFragment"
        android:icon="@drawable/bi_person"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>
</menu>