<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/intro_image"
    tools:context=".fragment.loginRegister.IntroductionFragment">

    <TextView
        android:id="@+id/tv_intro_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_title1"
        android:textAllCaps="true"
        style="@style/h3"
        android:layout_marginStart="30dp"
        android:layout_marginTop="231dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_title2"
        style="@style/h4"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_intro_title_1"
        android:textStyle="bold"
        android:layout_marginTop="276dp"/>

    <TextView
        android:id="@+id/tv_intro_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_content"
       style="@style/h2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="330dp" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        style="@style/blackButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>