<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.shopping.AddAddressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/new_address"
                app:titleCentered="true"
                app:titleTextAppearance="@style/h2"
                app:titleTextColor="@color/primary"
                android:layout_marginBottom="10dp" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            android:text="@string/contact"
            android:layout_marginStart="20dp"
            style="@style/h2"
            android:textSize="15sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_contact"
            app:layout_constraintStart_toStartOf="@id/tv_contact">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/editText"
                android:background="@color/disable_field"
                android:hint="@string/full_name"
                android:autofillHints="name"
                android:inputType="text"
                android:ems="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_name"
            app:layout_constraintStart_toStartOf="@id/tv_contact">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/editText"
                android:background="@color/disable_field"
                android:hint="@string/phone_number"
                android:autofillHints="phone"
                android:inputType="phone"
                android:ems="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintTop_toBottomOf="@id/divider_1"
            app:layout_constraintStart_toStartOf="@id/tv_contact"
            style="@style/h2"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            app:layout_constraintStart_toStartOf="@id/tv_location">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/editText"
                android:background="@color/disable_field"
                android:hint="@string/city"
                android:inputType="text"
                android:ems="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_district"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_city"
            app:layout_constraintStart_toStartOf="@id/tv_location">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_district"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/editText"
                android:background="@color/disable_field"
                android:hint="@string/district"
                android:inputType="text"
                android:ems="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_ward"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_district"
            app:layout_constraintStart_toStartOf="@id/tv_location">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_ward"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/editText"
                android:background="@color/disable_field"
                android:hint="@string/ward"
                android:inputType="text"
                android:ems="15"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_ward"
            app:layout_constraintStart_toStartOf="@id/tv_location">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/editText"
                android:background="@color/disable_field"
                android:hint="@string/address"
                android:inputType="text"
                android:ems="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider_2"
            app:layout_constraintStart_toStartOf="@id/tv_location"
            android:text="@string/addition_title"
            style="@style/h2"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_addition"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_addition"
            app:layout_constraintStart_toStartOf="@id/tv_location">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_additional_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/editText"
                android:background="@color/disable_field"
                android:hint="@string/addition"
                android:inputType="text"
                android:ems="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_addition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_addition"
            app:layout_constraintTop_toBottomOf="@id/divider_3"
            android:text="@string/address_title"
            android:layout_marginTop="10dp"
            style="@style/h2"
            android:textSize="15sp"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_address_title"
            app:layout_constraintStart_toStartOf="@id/tv_address_title">
            <RadioButton
                android:id="@+id/radio_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/home"/>

            <RadioButton
                android:id="@+id/radio_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/work_space"/>
        </RadioGroup>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_save_address"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/blackButtonStyle"
            android:text="@string/save_address"
            android:textAllCaps="true"
            android:textSize="20sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>